fix: update responsive behavior of cookie banner
- adjust position and max-height to render
  at the bottom of the screen and add scrollbar
  if content exceeds view height

BBNAV-21

--- a/sass/themes/bbnavi/_klaro.scss
+++ b/sass/themes/bbnavi/_klaro.scss
@@ -23,7 +23,9 @@
   box-shadow: none;
   transform: none;
   margin: 0 0 0 auto;
+  max-height: 100vh;
   max-width: 600px;
+  position: relative;
 }
 
 .klaro .cookie-modal .cm-modal .cm-header {
